--- a/resources/views/base.twig
+++ b/resources/views/base.twig
@@ -3,6 +3,7 @@
 <head>
         <meta charset="UTF-8">
         <title>Lenspector</title>
+		<link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
     <header>
