Add some JavaScript and CSS style

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5766,4 +5766,18 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
+#main-container {
+  margin-top: 65px; }
+
+.thumbnail {
+  text-align: center; }
+
+.menu-glyphicon {
+  font-size: 5em;
+  margin-top: 0.2em; }
+
+@media (min-width: 772px) {
+  ul.nav li.dropdown:hover > ul.dropdown-menu {
+    display: block; } }
+
 /*# sourceMappingURL=app.css.map */
