Adding an item in the list menu

--- a/resources/views/base.twig
+++ b/resources/views/base.twig
@@ -30,6 +30,7 @@
                                         <li><a href="">Move to Packship</a></li>
                                         <li><a href="">On Hands Inventory</a></li>
                                         <li><a href="">Consignment Inventory</a></li>
+                                        <li><a href="">Update a product's status</a></li>
                                         <li><a href="">Sales</a></li>
                                     </ul>
                                 </li>
