Template refatoring to facilitate private or public content like navigation menu

--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -1,5 +1,6 @@
-{% extends "base.twig" %}
-{% block body %}
+{% extends "private-content.twig" %}
+
+{% block content %}
 <div class="row">
     <div class="jumbotron">
         <h1>{{ title }}</h1>
