--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,9 +8,12 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+/* Main container used in every view */
 #main-container {
     margin-top: 65px;
 }
+
+/* Home view */
 .thumbnail {
     text-align: center;
 }
@@ -18,6 +21,20 @@
     font-size: 5em;
     margin-top: 0.2em;
 }
+
+/* Login view form */
+.form-signin {
+    max-width: 300px;
+    margin: 0 auto 0 auto;
+    margin-top: 180px;
+}
+.form-signin .form-control {
+    margin-bottom: 15px;
+    height: 45px;
+    font-size: 16px;
+}
+
+/* For small screens */
 @media (min-width: 772px) {
     ul.nav li.dropdown:hover > ul.dropdown-menu {
         display: block;
