--- a/resources/views/login.twig
+++ b/resources/views/login.twig
@@ -2,12 +2,13 @@
 
 {% block body %}
 <div class="container">
-    <form class="form-signin">
+    <form class="form-signin" method="POST" action="/login">
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
+        <input type="hidden" name="_token" value="{{ csrf_token()  }}">
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
 </div>
