Resolve home icon link issue: https://github.com/HE-Arc/lenspector/pull/17#issuecomment-255588702

--- a/resources/views/navigation-bar.twig
+++ b/resources/views/navigation-bar.twig
@@ -13,7 +13,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.php"><i class="glyphicon glyphicon-home"></i></a></li>
+                    <li><a href="/home"><i class="glyphicon glyphicon-home"></i></a></li>
                     <li role="presentation" class="dropdown">
                         <a class="dropdown-toggle disabled" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">
                             Inventory <span class="caret"></span>
