--- a/resources/views/navigation-bar.twig
+++ b/resources/views/navigation-bar.twig
@@ -27,6 +27,9 @@
                         </ul>
                     </li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/logout">Logout</a></li>
+                </ul>
             </div>
         </div>
     </nav>
