--- a/resources/views/auth/login.twig
+++ b/resources/views/auth/login.twig
@@ -52,10 +52,10 @@
                         {{ csrf_field() }}
 
                         <div class="form-group">
-                            <label for="email" class="col-md-4 control-label">E-Mail Address</label>
+                            <label for="name" class="col-md-4 control-label">User name</label>
 
                             <div class="col-md-6">
-                                <input id="email" type="email" class="form-control" name="email" value="{{ old('email') }}" required autofocus>
+                                <input id="name" type="text" class="form-control" name="name" required autofocus>
                             </div>
                         </div>
 
