Use app configuration name in title
Use app name following what is specified in the configuration file.

--- a/resources/views/base.twig
+++ b/resources/views/base.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lenspector</title>
+    <title>{{ config('app.name', 'Laravel') }}</title>
     <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
