--- a/resources/views/auth/login.twig
+++ b/resources/views/auth/login.twig
@@ -38,11 +38,6 @@
                 <ul class="nav navbar-nav">
                     &nbsp;
                 </ul>
-
-                <!-- Right Side Of Navbar -->
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{ url('/login') }}">Login</a></li>
-                </ul>
             </div>
         </div>
     </nav>
@@ -57,10 +52,10 @@
                         {{ csrf_field() }}
 
                         <div class="form-group">
-                            <label for="email" class="col-md-4 control-label">E-Mail Address</label>
+                            <label for="name" class="col-md-4 control-label">User name</label>
 
                             <div class="col-md-6">
-                                <input id="email" type="email" class="form-control" name="email" value="{{ old('email') }}" required autofocus>
+                                <input id="name" type="text" class="form-control" name="name" value="{{ old('name') }}" required autofocus>
                             </div>
                         </div>
 
