--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -11,7 +11,7 @@
 </div>
 <div class="row">
     {% for tile in links %}
-        <div class="col-sm-6">
+        <div class="col-sm-6 menu-tile">
             <a href="{{ tile['link'] | url_encode }}">
                 <div class="thumbnail">
                     <i class="glyphicon menu-glyphicon {{ tile['glyphicon'] }}"></i>
