--- a/resources/views/inventory.twig
+++ b/resources/views/inventory.twig
@@ -3,7 +3,8 @@
 {% block content %}
 <ul class="list-group">
     {% for p in products %}
-        <li>{{ p.id }}</li>
+        <li>{{ p.sn }} {{ p.type.name }}
+        </li>
     {% endfor %}
 </ul>
 {{ products.links() | raw }}
