--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -11,12 +11,10 @@
 </div>
 <div class="row">
     {% for tile in links %}
-        <div class="col-sm-6 menu-tile">
-            <a href="{{ tile['link'] | url_encode }}">
-                <div class="thumbnail">
-                    <i class="glyphicon menu-glyphicon {{ tile['glyphicon'] }}"></i>
-                    <h2>{{ tile['title'] }}</h2>
-                </div>
+        <div class="col-sm-6">
+            <a href="{{ tile['link'] | url_encode }}" class="thumbnail">
+                <i class="glyphicon menu-glyphicon {{ tile['glyphicon'] }}"></i>
+                <h2>{{ tile['title'] }}</h2>
             </a>
         </div>
     {% endfor %}
