--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -1,6 +1,6 @@
-{% extends "private-content.twig" %}
+{% extends "base.twig" %}
 
-{% block content %}
+{% block body %}
 <div class="row">
     <div class="jumbotron">
         <h1>{{ title }}</h1>
