--- a/resources/views/base.twig
+++ b/resources/views/base.twig
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div class="container" id="main-container">
+        {% if auth_user() %}
+            {% include 'navigation-bar.twig' %}
+        {% endif %}
         {% block body %}{% endblock %}
     </div>
     <script src="js/app.js"></script>
