--- a/resources/views/inventory/inventory-update.twig
+++ b/resources/views/inventory/inventory-update.twig
@@ -1,13 +1,21 @@
 {% extends 'base.twig' %}
 {% block body %}
-    <form action="{{ route('product.update') }}" method="post">
+    <h1>On Hands Invenory Entry or Return</h1>
+    <p class="lead">
+        Insert a valid serial number to put the concerned lense into
+        the on hands inventory.
+    </p>
+    <form class="form-inline" action="{{ route('product.update')}}" method="post">
+        {{ csrf_field() }}
         <input name="_method" type="hidden" value="put">
-        <div class="form-group row">
-            <label for="serial_number" class="col-xs-2 col-form-label">Serial Number</label>
-            <div class="col-xs-10">
+        <input name="inventory_status" type="number" value="1" hidden>
+        <div class="form-group">
+            <label for="serial_number" class="col-xs-6 col-sm-4">Serial Number</label>
+            <div class="col-xs-6 col-sm-2">
                 <input class="form-control" type="text" value="" id="serial_number"
                     placeholder="F12345678" pattern="F[0-9]{8}" required>
             </div>
         </div>
+        <button class="btn btn-primary" type="submit" name="submit">Insert</button>
     </form>
 {% endblock %}
