--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1061,7 +1061,7 @@ body {
   font-family: "Raleway", sans-serif;
   font-size: 14px;
   line-height: 1.6;
-  color: #FFFFFF;
+  color: #757575;
   background-color: #f5f8fa; }
 
 input,
@@ -2694,7 +2694,7 @@ select[multiple].input-lg,
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: white; }
+  color: #b5b5b5; }
 
 @media (min-width: 768px) {
   .form-inline .form-group {
@@ -4267,7 +4267,7 @@ a.badge:hover, a.badge:focus {
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: inherit;
-  background-color: #2196F3; }
+  background-color: #BBDEFB; }
   .jumbotron h1,
   .jumbotron .h1 {
     color: inherit; }
@@ -4276,7 +4276,7 @@ a.badge:hover, a.badge:focus {
     font-size: 21px;
     font-weight: 200; }
   .jumbotron > hr {
-    border-top-color: #0c7cd5; }
+    border-top-color: #8bc7f8; }
   .container .jumbotron,
   .container-fluid .jumbotron {
     border-radius: 6px;
@@ -4315,7 +4315,7 @@ a.badge:hover, a.badge:focus {
     margin-right: auto; }
   .thumbnail .caption {
     padding: 9px;
-    color: #FFFFFF; }
+    color: #757575; }
 
 a.thumbnail:hover,
 a.thumbnail:focus,
