--- a/resources/views/base.twig
+++ b/resources/views/base.twig
@@ -17,6 +17,11 @@
                 {% endfor %}
             </p>
         {% endif %}
+        {% if session('status') %}
+            <p class="alert alert-success">
+                {{ session('status') }}
+            </p>
+        {% endif %}
         {% block body %}{% endblock %}
     </div>
     <script src="{{ asset('js/app.js') }}"></script>
