Add missing form input name attribute

--- a/resources/views/inventory/inventory-update.twig
+++ b/resources/views/inventory/inventory-update.twig
@@ -12,7 +12,7 @@
             <label for="serial_number" class="col-xs-6 col-sm-4">Serial Number</label>
             <div class="col-xs-6 col-sm-2">
                 <input class="form-control" type="text" value="" id="serial_number"
-                    placeholder="F12345678" pattern="F[0-9]{8}" required>
+                    name="serial_number" placeholder="F12345678" pattern="F[0-9]{8}" required>
             </div>
         </div>
         <div class="form-group row">
