--- a/resources/views/inventory/inventory-update.twig
+++ b/resources/views/inventory/inventory-update.twig
@@ -15,16 +15,7 @@
                     name="serial_number" placeholder="F12345678" pattern="F[0-9]{8}" required>
             </div>
         </div>
-        <div class="form-group row">
-            {% for s in statuses %}
-                <div class="form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="inventory_status" value="{{ s.id }}">
-                        {{ s.status }}
-                    </label>
-                </div>
-            {% endfor %}
-        </div>
+        <input class="form-check-input" type="radio" name="inventory_status" value="1" hidden>
         <button class="btn btn-primary" type="submit" name="submit">Insert</button>
     </form>
 {% endblock %}
