Hide unused navbar entry and correct some language flaws UI

--- a/resources/views/inventory/inventory-update.twig
+++ b/resources/views/inventory/inventory-update.twig
@@ -1,6 +1,6 @@
 {% extends 'base.twig' %}
 {% block body %}
-    <h1>On Hands Invenory Entry or Return</h1>
+    <h1>On hands inventory entry or return</h1>
     <p class="lead">
         Insert a valid serial number to put the concerned lense into
         the on hands inventory.
