--- a/resources/views/navigation-bar.twig
+++ b/resources/views/navigation-bar.twig
@@ -22,7 +22,7 @@
                             <li><a href="{{ route('product.edit') }}">Move to Packship</a></li>
                             <li><a href="{{ route('product.index', {inventorySlug: 'on-hands'}) }}">On Hands Inventory</a></li>
                             <li><a href="{{ route('product.index', {inventorySlug: 'consignment'}) }}">Consignment Inventory</a></li>
-                            <li><a href="">Update a product's status</a></li>
+                            <!-- <li><a href="">Update a product's status</a></li> -->
                             <li><a href="{{ route('product.index', {inventorySlug: 'sales'}) }}">Sales</a></li>
                         </ul>
                     </li>
