--- a/resources/views/inventory/inventory-update.twig
+++ b/resources/views/inventory/inventory-update.twig
@@ -5,7 +5,7 @@
         Insert a valid serial number to put the concerned lense into
         the on hands inventory.
     </p>
-    <form action="{{ route('product.update')}}" method="post">
+    <form action="{{ route('product.update', {inventory: inventory}) }}" method="post">
         {{ csrf_field() }}
         <input name="_method" type="hidden" value="put">
         <div class="form-group row">
@@ -15,7 +15,9 @@
                     name="serial_number" placeholder="F12345678" pattern="F[0-9]{8}" required>
             </div>
         </div>
-        <input class="form-check-input" type="radio" name="inventory_status" value="1" hidden>
+        {% if inventory == 'remote' and inventoryStatuses is defined %}
+            Remote inventory update
+        {% endif %}
         <button class="btn btn-primary" type="submit" name="submit">Insert</button>
     </form>
 {% endblock %}
