--- a/resources/views/navigation-bar.twig
+++ b/resources/views/navigation-bar.twig
@@ -15,7 +15,10 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ route('home') }}"><i class="glyphicon glyphicon-home"></i></a></li>
                     <li role="presentation" class="dropdown">
-                        <a class="dropdown-toggle disabled" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle disabled" data-toggle="dropdown"
+                            href="{{ route('inventory') }}" role="button"
+                            aria-haspopup="true" aria-expanded="false"
+                        >
                             Inventory <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
