--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5803,6 +5803,11 @@ button.close {
   height: 45px;
   font-size: 16px; }
 
+/* Clickable table rows */
+.clickable-row:hover {
+  cursor: pointer;
+  background-color: #eeeeee; }
+
 /* For small screens */
 @media (min-width: 772px) {
   ul.nav li.dropdown:hover > ul.dropdown-menu {
