Add customer creation menu entry in the navbar

--- a/resources/views/navigation-bar.twig
+++ b/resources/views/navigation-bar.twig
@@ -38,6 +38,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="{{ route('customer.index')}}">Show customers</a></li>
+                            <li><a href="{{ route('customer.create')}}">New customer</a></li>
                         </ul>
                     </li>
                 </ul>
