--- a/resources/views/customer/customer-show.twig
+++ b/resources/views/customer/customer-show.twig
@@ -37,7 +37,7 @@
             </label>
             <div class="col-sm-2 col-md-2">
                 <p class="form-control-static">
-                    <a href="maitlto:{{ customer.email }}">
+                    <a href="mailto:{{ customer.email }}">
                         {{ customer.email }}
                     </a>
                 </p>
