Add back buttons in some customer views.

--- a/resources/views/customer/customer-create.twig
+++ b/resources/views/customer/customer-create.twig
@@ -104,6 +104,7 @@
             {% else %}
                 <button type="submit" class="btn btn-primary">Update</button>
             {% endif %}
+                <a href="{{ url_previous() }}" class="btn btn-default">Back</a>
         </div>
     </div>
 </form>
