--- a/resources/views/customer/customer-show.twig
+++ b/resources/views/customer/customer-show.twig
@@ -93,5 +93,6 @@
     </fieldset>
     <a href="{{ route('customer.edit', {customer: customer.slug}) }}" class="btn btn-default">Edit</a>
     {# <a href="{{ route('customer.destroy', {customer: customer.slug}) }}" class="btn btn-danger">Delete</a> #}
+    <a href="{{ url_previous() }}" class="btn btn-default">Back</a>
 </form>
 {% endblock %}
